--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "quizli"
+name = "qzlt"
 version = "0.1.0"
 description = "A flashcard CLI application"
 authors = ["Calvin Cheng <calvin.cc.cheng@gmail.com>"]
